infrastructure/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`argocd.pine-cluster.home`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
    - match: HostSNI(`argocd.pine-cluster.home`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
  tls:
    passthrough: true
